<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layoutDirection="rtl"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correctAnswers"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/txtCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="99"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrongAnswers"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/txtUnCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="32dp"
            android:layout_height="23dp"
            android:text="@string/lives"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/txtLife"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finalScore"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/txtAllGrades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/returnHome"
            tools:ignore="MissingConstraints"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>