<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layoutDirection="rtl">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionNumber"
        tools:ignore="MissingConstraints"/>

        <EditText
            android:id="@+id/txt_level"
            android:layout_width="50dp"
            android:layout_height="65dp"
            android:ems="10"
            android:inputType="numberDecimal"
            tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theQueston"
        tools:ignore="MissingConstraints"/>

        <EditText
            android:id="@+id/txt_question"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:textSize="28sp"
            tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theCoreectAnswer"
        tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/txt_ans1"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:textSize="28sp"
            tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer2"
        tools:ignore="MissingConstraints"/>

        <EditText
            android:id="@+id/txt_ans2"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:textSize="28sp"
            tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer3"
        tools:ignore="MissingConstraints"/>

        <EditText
            android:id="@+id/txt_ans3"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:textSize="28sp"
            tools:ignore="MissingConstraints"/>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            tools:ignore="MissingConstraints"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>