<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="67dp"
        tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionSend"
            android:inputType="textEmailAddress"
            android:textSize="28sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="89dp"
            tools:layout_editor_absoluteY="67dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="119dp" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionSend"
            android:inputType="textPassword"
            android:textSize="28sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="89dp"
            tools:layout_editor_absoluteY="119dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="81dp"
            android:layout_height="45dp"
            android:text="@string/login"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="170dp"
            tools:layout_editor_absoluteY="227dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>